# Face_DAI_JNI

./: README.md
FaceAPK/: INSTALL.txt
FaceAPK/FaceRec/: .gitignore  cmake_setting.txt  gradle.properties
FaceAPK/FaceRec/app/: CMakeLists.txt  build.gradle
FaceAPK/FaceRec/app/libs/: openCVLibrary.aar
FaceAPK/FaceRec/app/src/main/: AndroidManifest.xml
FaceAPK/FaceRec/app/src/main/java/com/grg/idcard/: IDCardDate.java  IDCardManager.java  IDCardMsg.java  IDCardRecognition.java
FaceAPK/FaceRec/app/src/main/java/com/guoguang/jni/: JniCall.java
FaceAPK/FaceRec/app/src/main/java/com/xin/android/facerecdemo/bean/: ImageData.java
FaceAPK/FaceRec/app/src/main/java/com/xin/android/facerecdemo/util/: Constant.java  JniLoader.java
FaceAPK/FaceRec/app/src/main/java/com/xin/android/facerecdemo/view/: CircleMaskView.java  FaceDetectorActivity.java  MainActivityActivity.java  VerifyActivity.java
FaceAPK/FaceRec/app/src/main/res/drawable/: button_background.xml  round_style.xml
FaceAPK/FaceRec/app/src/main/res/layout/: activity_main.xml  face_detect_activity.xml  tutorial3_surface_view.xml
FaceAPK/FaceRec/app/src/main/res/values/: colors.xml  strings.xml
FaceAPK/FaceRec/gradle/wrapper/: gradle-wrapper.properties
tmp/src/main/java/com/grg/idcard/: IDCardException.java
tmp/src/main/java/com/xin/android/facerecdemo/: App.java
tmp/src/main/java/com/xin/android/facerecdemo/bean/: FaceInfo.java  Rect.java
tmp/src/main/java/com/xin/android/facerecdemo/util/: EncryptUtils.java  JniLoader.java
tmp/src/main/java/com/xin/android/facerecdemo/view/: FaceDetectorActivity.java
tmp/src/main/res/layout/: activity_testidcard.xml  activity_verify.xml  face_detect_activity.xml
tmp/src/main/res/values/: colors.xml  styles.xml
